--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -33,4 +33,19 @@ a {
   @extend %quicksand-500;
 }
 
+.title {
+  font-size: 48px;
+  text-align: center;
+  @extend %roboto-700;
+  line-height: 65px;
+  color: $title;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+
+}
+.text {
+  text-align: center;
+  max-width: 570px;
+  margin: 0 auto 55px;
+}
 
