--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,81 +1,73 @@
-@import 'vars';
-@import 'fonts';
-@import 'reset';
-@import 'libs';
-@import 'global';
-
+@import "vars";
+@import "fonts";
+@import "reset";
+@import "libs";
+@import "global";
 
 .header {
   padding: 40px 0;
 
-		&__inner {
-      align-items: center;
-      display: flex;
-      justify-content: space-between;
-		}
+  &__inner {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+  }
 }
-
 
 .menu {
+  &__list {
+    display: flex;
+  }
 
-		&__list {
-      display: flex;
-		}
+  &__list-item + .menu__list-item {
+    margin-left: 35px;
+  }
 
-		&__list-item + .menu__list-item {
-      margin-left: 35px;
-		}
-
-		&__list-link {
-      @extend %roboto-400;
-      text-transform: uppercase;
-      color: $title;
-      padding-bottom: 0 2px 2px;
-      transition: all 0.3s;
-      &:hover {
-        color: $accent;
-        border-bottom: 1px $accent solid ;
-        @extend %roboto-700;
-         ;
-      }
-		}
-
-    &__list-link--active {
-      @extend %roboto-700;
+  &__list-link {
+    @extend %roboto-400;
+    text-transform: uppercase;
+    color: $title;
+    padding-bottom: 0 2px 2px;
+    transition: all 0.3s;
+    &:hover {
       color: $accent;
-      border-bottom: 1px $accent solid
+      border-bottom: 1px $accent solid;
+      @extend %roboto-700;
     }
+  }
 
+  &__list-link--active {
+    @extend %roboto-700;
+    color: $accent;
+    border-bottom: 1px $accent solid;
+  }
 }
 .user-nav {
-    display: flex;
+  display: flex;
 
-    &__link {
-      position: relative;
-    }
+  &__link {
+    position: relative;
+  }
 
-		&__link + .user-nav__link  {
-      margin-left: 25px;
-		}
+  &__link + .user-nav__link {
+    margin-left: 25px;
+  }
 
-		&__num {
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      background-color: $accent;
-      top: -9px;
-      right: -14px;
-      font-size: 12px;
-      font-weight: 500;
-      color: #fff;
-      text-align: center;
-      line-height: 20px;
-		}
+  &__num {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: $accent;
+    top: -9px;
+    right: -14px;
+    font-size: 12px;
+    font-weight: 500;
+    color: #fff;
+    text-align: center;
+    line-height: 20px;
+  }
 }
-
-
-
 
 .footer {
   background-color: $bg;
@@ -86,211 +78,322 @@
   border-bottom: 1px solid #ececec;
   display: flex;
   align-items: flex-start;
-  
 
-    &__contact {
-      width: 250px;
-      margin-right: 50px;
-    }
-
-    &__nav {
-      width: 170px;
-      margin-right: 30px;
-
-    }
-
-    &__item-form {
-      max-width: 470px;
-    }
-
-		&__adress,
-    &__email,
-    &__tel {
-      
-      margin-bottom: 10px;
-      display: block;
-
-    }
-
-		&__social-list {
-      display: flex;
-      margin-top: 25px;
-      align-items: center;
-		}
-
-		&__social-item + .footer-top__social-item {
-      margin-left: 18px;
-		}
-
-
-
-		&__social-link {
-      transition: all .3s;
-      path {
-        fill: $default;
-      }
-      &:hover{
-        path {
-          fill: $accent;
-        }
-      }
-		}
-
-    &__logo {
-      margin-bottom: 33px;
-      display: block;
-    }
-
-		&__title {
-      margin-bottom: 40px;
-      color: $title;
-      @extend %roboto-700;
-      line-height: 1;
-      font-size: 22px;
-		}
-
-	
-		&__link {
-      margin-bottom: 10px;
-      
-      
-		}
-
-		&__text {
-      margin-bottom: 25px;
-		}
-
-		&__form-input {
-
-      background-color: #fff;
-      max-width: 320px;
-      width: 100%;
-      border: none;
-      padding: 12px 10px 12px 15px;
-      box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
-      &::placeholder {
-        color: $default;  
-      }
-		}
-
-		&__form-btn {
-      @extend %btn;
-      border: none;
-      cursor: pointer;
+  &__contact {
+    width: 250px;
+    margin-right: 50px;
   }
-	
+
+  &__nav {
+    width: 170px;
+    margin-right: 30px;
+  }
+
+  &__item-form {
+    max-width: 470px;
+  }
+
+  &__adress,
+  &__email,
+  &__tel {
+    margin-bottom: 10px;
+    display: block;
+  }
+
+  &__social-list {
+    display: flex;
+    margin-top: 25px;
+    align-items: center;
+  }
+
+  &__social-item + .footer-top__social-item {
+    margin-left: 18px;
+  }
+
+  &__social-link {
+    transition: all 0.3s;
+    path {
+      fill: $default;
+    }
+    &:hover {
+      path {
+        fill: $accent;
+      }
+    }
+  }
+
+  &__logo {
+    margin-bottom: 33px;
+    display: block;
+  }
+
+  &__title {
+    margin-bottom: 40px;
+    color: $title;
+    @extend %roboto-700;
+    line-height: 1;
+    font-size: 22px;
+  }
+
+  &__link {
+    margin-bottom: 10px;
+  }
+
+  &__text {
+    margin-bottom: 25px;
+  }
+
+  &__form-input {
+    background-color: #fff;
+    max-width: 320px;
+    width: 100%;
+    border: none;
+    padding: 12px 10px 12px 15px;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+    &::placeholder {
+      color: $default;
+    }
+  }
+
+  &__form-btn {
+    @extend %btn;
+    border: none;
+    cursor: pointer;
+  }
 }
 
 .footer-bottom {
-
-    height: 75px;
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 12px;
+  @extend %quicksand-400;
+  &__accept {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 12px;
-    @extend %quicksand-400;
-		&__accept {
-      display: flex
-		}
+  }
 
-		&__accept-img {
-      margin-left: 25px;
-		}
+  &__accept-img {
+    margin-left: 25px;
+  }
 }
 
 .top-slider {
-    background-image: url('../images/top-slider-bg.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: $bg;
-    padding: 65px 0 45px;
+  background-image: url("../images/decor/top-slider-bg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: $bg;
+  padding: 65px 0 45px;
 
-    &__container {
-      max-width: 1560px;
-      
-    }
+  &__container {
+    max-width: 1560px;
+  }
 
-		&__item {
-      display: flex !important;
-      justify-content: space-between;
-		}
+  &__item {
+    display: flex !important;
+    justify-content: space-between;
+  }
 
-		&__content {
-      padding-top: 125px;
-      padding-left: 175px;
-		}
+  &__content {
+    padding-top: 125px;
+    padding-left: 175px;
+  }
 
-		&__title {
-      max-width: 670px;
-      color: $title;
-      font-size: 58px;
-      line-height: 68px;
-      @extend %roboto-700;
-      margin-bottom: 35px;
-		}
+  &__title {
+    max-width: 670px;
+    color: $title;
+    font-size: 58px;
+    line-height: 68px;
+    @extend %roboto-700;
+    margin-bottom: 35px;
+  }
 
-		&__text {
-      max-width: 470px;
-      margin-bottom: 55px;
-		}
+  &__text {
+    max-width: 470px;
+    margin-bottom: 55px;
+  }
 
-		&__link {
-      @extend %btn;
-      padding: 14px 35px;
+  &__link {
+    @extend %btn;
+    padding: 14px 35px;
+  }
 
-		}
-
-    .slick-dots {
-      margin-top: -70px;
-      display: flex;
-      justify-content: center;
-      li{
-        line-height: 0;
-        padding: 0 5px;
-        button {
-          padding: 0;
-          font-size: 0;
-          background-color: transparent;
-          width: 26px;
-          height: 26px;
-          border: 1px solid transparent;
+  .slick-dots {
+    margin-top: -70px;
+    display: flex;
+    justify-content: center;
+    li {
+      line-height: 0;
+      padding: 0 5px;
+      button {
+        padding: 0;
+        font-size: 0;
+        background-color: transparent;
+        width: 26px;
+        height: 26px;
+        border: 1px solid transparent;
+        border-radius: 50%;
+        position: relative;
+        &::before {
+          content: "";
+          width: 6px;
+          height: 6px;
           border-radius: 50%;
-          position: relative;
-          &::before{
-            content: '';
-            width: 6px;
-            height: 6px;
-            border-radius: 50%;
-            background-color: $default;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            
-          }
-
-
+          background-color: $default;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
         }
-        &.slick-active {
-
-          button{
+      }
+      &.slick-active {
+        button {
           border-color: $accent;
           &::before {
             background-color: $accent;
           }
-            }
         }
       }
     }
+  }
+}
+
+.categories-info {
+  padding: 120px 0;
+  background-image: url('../images/decor/categories-left-bg.png');
+  background-repeat: no-repeat;
+  background-position: center left;
+  &__inner{
+    padding: 120px 0;
+    background-image: url('../images/decor/categories-right-bg.png');
+    background-repeat: no-repeat;
+    background-position: center right;
+  }
+
+
+}
+
+.info {
+    margin-bottom: 110px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    &::before,
+    &::after{
+      content: '';
+      position: absolute;
+      z-index: -1;
+    }
+    &::before{
+      background-image: url('../images/decor/info-before.svg');
+      top: -40px;
+      left: -45px;
+      height: 120px;
+      width: 121px;
+    }
+    
+    &::after{
+      background-image: url('../images/decor/info-after.svg');
+      bottom: -25px;
+      right: -25px;
+      height: 52px;
+      width: 60px;
+    }
+
+
+		&__item {
+      width: 370px;
+      padding: 60px 30px;
+      box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+      background-color: #fff;
+
+      
+		}
+
+		&__item-title {
+      margin: 35px 0 10px;
+      color: $title;
+      font-size: 22px;
+      @extend %roboto-400;
+		}
+
+		&__item-text {
+		}
+  }
+.categories {
+
+		&__items {
+      display: grid;
+      min-height: 635px;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-gap: 30px;
+		}
+
+		&__item {
+      padding: 40px 0 0 40px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      &:nth-child(1){
+        grid-row: span 2;
+        .categories__item-subtitle,
+        .categories__item-link:hover{
+           color: #5800e4;
+        }  
+      }
+
+      &:nth-child(2){
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        grid-column: span 2;
+        padding: 0px 0 0 40px;
+        .categories__item-subtitle,
+        .categories__item-link:hover{
+           color: $accent;
+        }  
+      }
+      &:nth-child(3){
+        
+        padding: 40px 0 0 40px;
+        .categories__item-subtitle,
+        .categories__item-link:hover{
+           color: #ffbe49;
+        }  
+      }
+      &:nth-child(4){
+        
+        padding: 40px 0 0 40px;
+        .categories__item-subtitle,
+        .categories__item-link:hover{
+           color: #b0dcf4;
+        }  
+      }
+    
+
+		}
+
+
+		&__item-subtitle {
+     
+      margin-bottom: 5px;
+		}
+
+		&__item-title {
+      font-size: 22px;
+      color: $title;
+      margin-bottom: 15px;  
+		}
+
+		&__item-link {
+      color: $title;
+      text-transform: uppercase;
+      @extend %roboto-400;
+      transition: all .3s;
+		}
 }
 
 
 
-
-
-
-
-
-
-
-@import 'media';
+@import "media";
