--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -33,3 +33,10 @@ $bg: #f6f6f6;
       @extend %roboto-400;
 
 }
+
+@function max($numbers...) {
+   @return m#{a}x(#{$numbers});
+}
+@function min($numbers...) {
+   @return m#{i}n(#{$numbers});
+}
