--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,3 +1,6 @@
 //node_modules/slick-carousel/slick/slick.js
 
-@import '../../node_modules/slick-carousel/slick/slick.scss'
+@import '../../node_modules/slick-carousel/slick/slick.scss';
+
+@import '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox';
+
