--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -394,6 +394,67 @@
 		}
 }
 
+.video-fashion {
+    background-color: $bg ;
+    background-image: url('../images/decor/pattern.svg');
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+    padding: 125px 0;
+
+		&__inner {
+      display: flex;
+
+		}
+
+		&__popup {
+      margin-right: 65px;
+      max-width: 530px;
+      width: 100%;
+      height: 480px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+
+		}
+
+		&__play {
+		}
+
+		&__video-play {
+		}
+
+		&__content {
+      max-width: 570px;
+
+		}
+
+		&__subtitle {
+      padding-top: 75px;
+      font-size: 22px;
+      line-height: 26px;
+      text-transform: uppercase;
+      color: $accent;
+      margin-bottom: 5px;
+		}
+
+		&__title {
+      text-align: left;
+      margin-bottom: 15px;
+
+		}
+
+		&__text {
+      margin-bottom: 55px;
+		}
+
+		&__link {
+      @extend %btn;
+		}
+}
 
 
 @import "media";
