--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -4,3 +4,5 @@
 
 @import '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox';
 
+@import '../../node_modules/rateyo/src/jquery.rateyo';
+
