added promo and partners

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -317,8 +317,7 @@
       @extend %roboto-400;
 		}
 
-		&__item-text {
-		}
+	
   }
 .categories {
 
@@ -471,7 +470,7 @@
       margin-top: 55px;
       color: $title;
       text-transform: uppercase;
-      padding: 17px 18px;
+      padding: 14px 32px;
       border: 1px solid $accent;
 		}
 }
@@ -591,6 +590,95 @@
 .star {
   margin: 0 auto;
 }
+
+.promo {
+
+    background-image: url('../images/promo-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding: 150px 0 160px;
+    text-align: center;
+		&__inner {
+      max-width: 570px;
+      width: 100%;
+      margin-left: auto;
+		}
+
+		&__subtitle {
+      text-transform: uppercase;
+      color: $accent;
+      font-size: 22px;
+      margin-bottom: 10px;
+
+		}
+
+    &__clock {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 55px;
+    }
+
+    &__text {
+
+    }
+
+		&__title {
+		}
+
+		&__clock-item {
+      background-color: #fff;
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      span {
+        
+        font-size: 48px;
+        @extend %roboto-700;
+        color: $title;
+        margin:10px 0 7px;
+      }
+		}
+
+		&__link {
+      display: inline-block;
+      margin-top: 55px;
+      color: $title;
+      text-transform: uppercase;
+      padding: 14px 32px;
+      
+      border: 1px solid $accent;
+		}
+}
+
+.days {
+}
+.smalltext {
+}
+.hours {
+}
+.minutes {
+}
+.seconds {
+}
+.partners {
+    padding-top: 75px;
+
+		&__list {
+      height: 170px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center
+		}
+
+		&__item {
+		}
+}
+
 
 
 @import "media";
