--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -655,16 +655,6 @@
 		}
 }
 
-.days {
-}
-.smalltext {
-}
-.hours {
-}
-.minutes {
-}
-.seconds {
-}
 .partners {
     padding-top: 75px;
 
@@ -678,6 +668,121 @@
 		&__item {
 		}
 }
+
+.blog {
+    padding: 50px 0 160px;
+    background-image: url('../images/blog/blog-bg.svg');
+    
+    background-repeat: no-repeat;
+    background-position: center center;
+		&__items {
+      display: flex;
+      justify-content: space-between;
+      position: relative;
+      &::after {
+        position: absolute;
+        content: '';
+        top: -24px;
+        right: -21px;
+        background-image: url('../images/blog/decor.svg');
+        width: 126px;
+        height: 53px;
+        z-index: -1;
+
+      }
+		}
+
+		&__item {
+      max-width: 370px;
+      border: 1px solid #ececec;
+      transition: all .3s;
+      
+      &:hover {
+      box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+      border: none;
+      .blog__item-link {
+        color: $accent;
+        &::after {
+          background-image: url('../images/icons/arrow-accent.svg');
+        }
+      }
+
+      }
+		}
+    
+
+
+    &__item-box {
+      padding: 30px 40px;
+    }
+
+		&__item-imglink {
+      margin-bottom: 20px;
+		}
+
+		&__img {
+      object-fit: cover;
+      height: 288px;
+      
+		}
+		&__item-info {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 20px;
+		}
+
+		&__item-author,
+    &__item-date {
+      padding-left: 30px;
+      position: relative;
+      &::before {
+        position: absolute;
+        content: '' ;
+        width: 20px;
+        height: 20px;
+        left: 0;
+        top: 4px;
+      }
+		}
+    &__item-author::before {
+      background-image: url('../images/icons/user-grey.svg');
+    }
+
+		&__item-date::before{
+      background-image: url('../images/icons/time.svg');
+		}
+
+		&__item-titlelink {
+		}
+
+		&__item-title {
+      font-size: 22px;
+      @extend %roboto-400;
+      margin-bottom: 20px;
+     
+		}
+
+    &__item-link {
+      position: relative;
+       transition: all .3s;
+    }
+
+    
+		&__item-link::after {
+      content: '';
+      position: absolute;
+      top: 7px;
+      right: -15px;
+      width: 10px;
+      height: 8px;
+      background-image: url('../images/icons/arrow.svg');
+		}
+
+   
+
+}
+
+
 
 
 
