--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -49,3 +49,50 @@ a {
   margin: 0 auto 55px;
 }
 
+.breadcrumbs {
+    display: inline-flex;
+    justify-content: center;
+    padding-left: 25px;
+    position: relative;
+    &::before {
+      content: "" ;
+      position: absolute;
+      background-image: url('../images/icons/home.svg');
+      height: 16px;
+      width: 16px;
+      left: 0;
+      top: 4px;
+    }
+
+		&__list {
+      display: flex;
+      
+		}
+
+		&__item {
+      color: #727272;
+      padding-right: 40px;
+      position: relative;
+      &::after{
+        content: '';
+        position: absolute;
+        background-image: url('../images/icons/arrow-right.svg');
+        width: 9px;
+        height: 10px;
+        right: 15px;
+        top: 9px;
+      }
+      &:last-child{
+        color: $accent;
+        padding-right: 0;
+        &::after {
+          display: none;
+        }
+      }
+
+		}
+
+		&__link {
+      color: inherit;
+		}
+}
