--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -178,6 +178,26 @@
   }
 }
 
+.top {
+
+		&__container {
+      max-width: 1700px;
+      margin: 0 auto;
+      background-position: top center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding: 120px 0 130px;
+      text-align: center;
+		}
+
+		&__title {
+      
+
+		}
+}
+
+
+
 .top-slider {
   background-image: url("../images/decor/top-slider-bg.png");
   background-size: cover;
@@ -778,9 +798,69 @@
       background-image: url('../images/icons/arrow.svg');
 		}
 
-   
-
 }
+
+.modal {
+    max-width: 570px;
+    margin: 0 auto 115px;
+    padding-top: 100px;
+
+		&__links {
+      text-align: center;
+      margin-bottom: 40px;
+		}
+
+		&__link {
+      font-size: 22px;
+      color: #909090;
+      @extend %roboto-400;
+      text-transform: uppercase;
+      margin: 0 30px;
+		}
+
+		&__link--active {
+      color: $accent;
+		}
+
+		&__form {
+		}
+
+		&__lable {
+      margin-bottom: 30px;
+      display: block;
+		}
+
+    &__btn {
+      background-color: $title ;
+      text-transform: uppercase;
+      display: block;
+      @extend %roboto-400;
+      color: #fff;
+      padding: 14px 0;
+      width: 100%;
+      border: none;
+      cursor: pointer;
+      margin-bottom: 12px;
+    }
+
+		&__input {
+      display: block;
+      width: 100%;
+      border: none;
+      background-color: $bg;
+      height: 60px;
+      margin-top: 4px;
+      padding: 0 15px;
+
+		}
+
+
+		&__error {
+      display: inline-block;
+      color: $accent;
+		}
+}
+
 
 
 
