--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -865,6 +865,51 @@
     }
 }
 
+.page-404 {
+    
+    padding: 110px 0 120px;
+
+		&__inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+		}
+
+		&__content {
+      
+      max-width: 570px;
+      width: 100%;
+		}
+
+		&__title {
+      font-size: 48px;
+      @extend %roboto-700;
+      margin-bottom: 35px;
+      color: #28384f;
+		}
+
+		&__text {
+      margin-bottom: 55px;
+      max-width: 470px;
+		}
+
+		&__link {
+      background-color: #fe3e57;
+      text-transform: uppercase;
+      padding: 15px 32px;
+      color: #fff;
+      @extend %roboto-400;
+      box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
+
+		}
+
+		&__images {
+		}
+}
+
+
+
+
 
 
 
