--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -34,9 +34,9 @@ $bg: #f6f6f6;
 
 }
 
-@function max($numbers...) {
-   @return m#{a}x(#{$numbers});
-}
-@function min($numbers...) {
-   @return m#{i}n(#{$numbers});
+%checkbox-hidden{
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
 }
