--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -497,8 +497,93 @@
 
 .product-item {
     
-    
+    text-align: center;
     max-width: 370px ;
+    &.product-item--list {
+      min-width: 100%;
+      display: flex;
+      text-align: left;
+      &:hover {
+        .product-item__link-box {
+          transform: translateY(-100%);
+        }
+      }
+      .product-item__img-box {
+        height: 250px;
+        min-width: 200px;
+        margin-bottom: 0;
+        img {
+          height: 250px;
+        }
+      }
+      .product-item__box {
+        display: flex;
+        flex-wrap: wrap;
+      }
+      .product-item__title {
+        order: -1;
+        width: 100%;
+        padding: 0;
+        margin-bottom: 10px;
+      }
+      .product-item__price {
+        order: -1;
+        margin-left: -12px;
+        
+      }
+      .product-item__text {
+        margin-bottom: 25px;
+      }
+      .star {
+        margin-left: 23px;
+      }
+      .product-item__link-box {
+        background-color: transparent;
+        width: 115px;
+        box-shadow: none;
+        //transform: translateY(280%);
+        display: flex;
+        align-items: center;
+
+        .product-item__link {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          background-color: white;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        .product-item__link--line {
+          display: none;
+        }
+      }
+      .product-item__content-box {
+        display: block;
+      }
+      .product-item__wrapper-box {
+        padding: 30px 40px;
+        border: 1px solid #ececec;
+        border-left: none;
+      }
+      .product-item__btn {
+        cursor: pointer;
+        color: #fff;
+        background-color: $title;
+        padding: 11px 32px;
+        border: none;
+        &:hover {
+          background-color: $accent;
+          box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+        }
+      }
+    }
+
+    &__content-box {
+      display: none;
+    }
+
+    
 		&__img-box {
       position: relative;
       height: 370px;
@@ -907,11 +992,369 @@
 		}
 }
 
+.shop {
+    
+    padding: 120px 0 105px;
+		&__inner {
+      display: flex;
+		}
+
+		&__filters {
+      width: 370px;
+      margin-right: 30px;
+		}
+
+}
+
+.filter__item {
+  padding: 35px 30px 40px;
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+}
+
+.filter__title {
+  font-size: 22px;
+  @extend %roboto-400;
+  margin-bottom: 25px;
+  color: $title;
+  text-transform: uppercase;
+
+}
+
+.filter-search {
+    
+
+		
+
+		&__form {
+      display: flex;
+		}
+
+		&__input {
+      border: none;
+      background-color: $bg;
+      padding: 0 5px 0 17px ;
+      height: 50px;
+      width: 260px;
+
+		}
+
+		&__btn {
+      width: 50px;
+      height: 50px;
+      background-color: $accent;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      
+		}
+}
+
+.filter-price {
+
+		&__form {
+		}
+
+		&__input {
+		}
+
+		&__label {
+      padding-top: 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+		}
+
+    span {
+
+    }
+
+		&__btn {
+      @extend %btn;
+      border: none;
+      cursor: pointer;
+
+		}
+}
+
+.irs--flat .irs-line {
+    top: 13px;
+    height: 5px;
+    background-color: #ececec;
+    border-radius: 0px;
+}
+
+.irs--flat .irs-handle {
+    top: 0px;
+    width: 30px;
+    height: 30px; 
+    background-color: #fff;
+    box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
+}
+
+.irs--flat .irs-handle>i:first-child {
+    display: none;
+}
+
+.irs--flat .irs-bar {
+    top: 13px;
+    height: 5px;
+    background-color: $accent;
+}
+
+.irs-from, .irs-to, .irs-single {
+    display: none;
+}
+
+.irs--flat .irs-min, .irs--flat .irs-max {
+    display: none;
+}
+
+.irs--flat {
+    height: 30px;
+}
+
+
+.filter-color {
+  padding-top: 35px;
+
+  &__form {}
+
+  &__lable  {
+    cursor: pointer;
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #ececec;
+    
+    & + .filter-color__lable {
+      padding-top: 20px;
+    }
+    &:last-child {
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+    
+  }
+
+  &__lable-text {}
+
+  &__box {}
+
+  &__input {
+    @extend %checkbox-hidden;
+   
+    position: absolute;
+    &:checked + .filter-color__checkbox {
+      background-image: url('../images/icons/icons8.png');
+
+      background-position: center;
+    }
+  }
+
+  &__checkbox {
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    margin-left: -16px;
+    margin-top: 7px;
+  }
+
+  &__checkbox--blue {
+    background-color: #00aeef;
+  }
+  &__checkbox--red {
+    background-color: #f52574;
+  }
+  &__checkbox--green {
+    background-color: #24d4ac;
+  }
+  &__checkbox--orange {
+    background-color: #ff7e00;
+  }
+  &__checkbox--black {
+    background-color: #000000;
+  }
+  &__checkbox--purple {
+    background-color: #923899;
+  }
+}
 
 
 
+.filter-size {
+
+  &__form {}
+
+  &__label {
+    padding-bottom: 20px;
+    padding-left: 35px;
+    display: flex;
+    align-items: center;
+    &:last-child {
+      padding-bottom: 0;
+    }
+
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+    position: absolute ;
+    &:checked + .filter-size__checkbox  {
+      background-image: url('../images/icons/check-size.svg');
+      background-position: center;
+      border: none;
+      & + .filter-size__text {
+        color: $accent;
+      }
+    }
+    
+  }
+
+  &__checkbox {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid $default;
+    margin-left: -35px;
+    margin-right: 15px;
+  }
+}
 
 
+.filter-category {
+
+  &__form {}
+
+  &__label {
+    cursor: pointer;
+
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+    position: absolute;
+    &:checked + .filter-category__checkbox {
+      color: white;
+      background-color: $accent;
+    }
+  }
+
+  &__checkbox {
+    color: $title;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 20px;
+    margin-bottom: 15px;
+    background-color: #f6f6f6;
+  }
+
+  &__checkbox-text {}
+
+  &__checkbox-number {}
+}
+
+.filter-popular {
+
+  &__form {}
+
+  &__label {
+    cursor: pointer;
+    margin-bottom: 20px;
+    margin-right: 8px;
+    display: inline-block;
+    padding: 8px 0;
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+    position: absolute;
+    &:checked + .filter-popular__checkbox {
+      background-color: $accent;
+      color: #fff;
+      border-color: $accent;
+    }
+  }
+
+  &__checkbox {
+    border: 1px solid $default;
+    padding: 10px 20px;
+    
+
+  }
+}
+
+.shop-content {
+  width: 100%;
+  &__filter {
+    border: 1px solid $default;
+    padding: 20px 25px 20px 30px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+  }
+  &__filter-btn {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    margin-left: 15px;
+    line-height: 0px;
+    cursor: pointer;
+  }
+  &__filter-buttons {
+    display: flex;
+    align-items: center;
+  }
+  &__filter-btn--active {
+
+    path {
+      fill: $accent;
+    }
+    
+  }
+  &__inner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-bottom: 1px solid #ececec;
+    .product-item {
+      margin-bottom: 40px;
+    }
+  }
+}
+
+.jq-selectbox__select {
+  height: 32px;
+  padding: 0 30px 0 0px;
+  margin-left: 30px;
+  border: none;
+  background: transparent;
+  box-shadow: none;
+  text-shadow: none;
+  @extend %quicksand-500;
+  color: $default;
+  &:hover {
+    background: transparent;
+  }
+  
+}
+.jq-selectbox__trigger {
+  
+  border-left: none;
+}
+
+.jq-selectbox__trigger-arrow {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 10px;
+  height: 5px;
+  background-image: url('../images/icons/select-arrow.svg');
+  border: none;
+}
 
 
 
