--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -179,7 +179,6 @@
 }
 
 .top {
-
 		&__container {
       max-width: 1700px;
       margin: 0 auto;
@@ -189,14 +188,7 @@
       padding: 120px 0 130px;
       text-align: center;
 		}
-
-		&__title {
-      
-
-		}
 }
-
-
 
 .top-slider {
   background-image: url("../images/decor/top-slider-bg.png");
@@ -289,8 +281,6 @@
     background-repeat: no-repeat;
     background-position: center right;
   }
-
-
 }
 
 .info {
@@ -320,14 +310,11 @@
       width: 60px;
     }
 
-
 		&__item {
       width: 370px;
       padding: 60px 30px;
       box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
-      background-color: #fff;
-
-      
+      background-color: #fff; 
 		}
 
 		&__item-title {
@@ -335,12 +322,10 @@
       color: $title;
       font-size: 22px;
       @extend %roboto-400;
-		}
-
-	
+		}	
   }
-.categories {
 
+.categories {
 		&__items {
       display: grid;
       min-height: 635px;
@@ -389,10 +374,7 @@
            color: #b0dcf4;
         }  
       }
-    
-
 		}
-
 
 		&__item-subtitle {
      
@@ -423,7 +405,6 @@
 
 		&__inner {
       display: flex;
-
 		}
 
 		&__popup {
@@ -437,18 +418,10 @@
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
-
-		}
-
-		&__play {
-		}
-
-		&__video-play {
 		}
 
 		&__content {
       max-width: 570px;
-
 		}
 
 		&__subtitle {
@@ -463,7 +436,6 @@
 		&__title {
       text-align: left;
       margin-bottom: 15px;
-
 		}
 
 		&__text {
@@ -482,7 +454,6 @@
       display: grid;
       grid-template-columns: repeat(3 , 1fr);
       grid-gap: 45px 30px;
-
 		}
 
 		&__link {
@@ -588,8 +559,7 @@
       position: relative;
       height: 370px;
       overflow: hidden;
-      margin-bottom: 25px;
-    
+      margin-bottom: 25px; 
 		}
 
   	&__images {
@@ -613,7 +583,6 @@
       justify-content: space-around;
       position: absolute;
       transform: translateY(300%);
-
 		}
 
     &__link--line::before,
@@ -627,9 +596,7 @@
       cursor: default;
     }
 
-
-    &__link--line::before {
-      
+    &__link--line::before { 
       left: 72px;
     }
 
@@ -648,12 +615,10 @@
       path {
         transition: all .2s;
       }
-
     }
 
     &:hover {
       .product-item__link-box {
-
         transform: translateY(0)
       }
     }
@@ -724,13 +689,6 @@
       margin-top: 55px;
     }
 
-    &__text {
-
-    }
-
-		&__title {
-		}
-
 		&__clock-item {
       background-color: #fff;
       width: 120px;
@@ -741,7 +699,6 @@
       justify-content: center;
       text-align: center;
       span {
-        
         font-size: 48px;
         @extend %roboto-700;
         color: $title;
@@ -754,8 +711,7 @@
       margin-top: 55px;
       color: $title;
       text-transform: uppercase;
-      padding: 14px 32px;
-      
+      padding: 14px 32px; 
       border: 1px solid $accent;
 		}
 }
@@ -769,17 +725,14 @@
       justify-content: space-between;
       align-items: center
 		}
-
-		&__item {
-		}
 }
 
 .blog {
     padding: 50px 0 160px;
     background-image: url('../images/blog/blog-bg.svg');
-    
     background-repeat: no-repeat;
     background-position: center center;
+
 		&__items {
       display: flex;
       justify-content: space-between;
@@ -793,7 +746,6 @@
         width: 126px;
         height: 53px;
         z-index: -1;
-
       }
 		}
 
@@ -811,12 +763,9 @@
           background-image: url('../images/icons/arrow-accent.svg');
         }
       }
-
-      }
-		}
+    }
+	}
     
-
-
     &__item-box {
       padding: 30px 40px;
     }
@@ -857,9 +806,6 @@
       background-image: url('../images/icons/time.svg');
 		}
 
-		&__item-titlelink {
-		}
-
 		&__item-title {
       font-size: 22px;
       @extend %roboto-400;
@@ -871,8 +817,7 @@
       position: relative;
        transition: all .3s;
     }
-
-    
+ 
 		&__item-link::after {
       content: '';
       position: absolute;
@@ -907,9 +852,6 @@
       color: $accent;
 		}
 
-		&__form {
-		}
-
 		&__lable {
       margin-bottom: 30px;
       display: block;
@@ -936,9 +878,7 @@
       height: 60px;
       margin-top: 4px;
       padding: 0 15px;
-
 		}
-
 
 		&__error {
       display: inline-block;
@@ -951,9 +891,9 @@
 }
 
 .page-404 {
-    
-    padding: 110px 0 120px;
 
+    padding: 110px 0 120px;
+    
 		&__inner {
       display: flex;
       justify-content: space-between;
@@ -961,7 +901,6 @@
 		}
 
 		&__content {
-      
       max-width: 570px;
       width: 100%;
 		}
@@ -985,10 +924,6 @@
       color: #fff;
       @extend %roboto-400;
       box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
-
-		}
-
-		&__images {
 		}
 }
 
@@ -1003,8 +938,7 @@
       width: 370px;
       margin-right: 30px;
 		}
-
-}
+  }
 
 .filter__item {
   padding: 35px 30px 40px;
@@ -1018,14 +952,9 @@
   margin-bottom: 25px;
   color: $title;
   text-transform: uppercase;
-
 }
 
 .filter-search {
-    
-
-		
-
 		&__form {
       display: flex;
 		}
@@ -1036,7 +965,6 @@
       padding: 0 5px 0 17px ;
       height: 50px;
       width: 260px;
-
 		}
 
 		&__btn {
@@ -1046,18 +974,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      border: none;
-      
+      border: none;   
 		}
 }
 
 .filter-price {
-
-		&__form {
-		}
-
-		&__input {
-		}
 
 		&__label {
       padding-top: 30px;
@@ -1066,15 +987,10 @@
       align-items: center;
 		}
 
-    span {
-
-    }
-
 		&__btn {
       @extend %btn;
       border: none;
       cursor: pointer;
-
 		}
 }
 
@@ -1115,11 +1031,8 @@
     height: 30px;
 }
 
-
 .filter-color {
   padding-top: 35px;
-
-  &__form {}
 
   &__lable  {
     cursor: pointer;
@@ -1135,20 +1048,13 @@
       border-bottom: none;
       padding-bottom: 0;
     }
-    
   }
-
-  &__lable-text {}
-
-  &__box {}
 
   &__input {
     @extend %checkbox-hidden;
-   
     position: absolute;
     &:checked + .filter-color__checkbox {
       background-image: url('../images/icons/icons8.png');
-
       background-position: center;
     }
   }
@@ -1185,8 +1091,6 @@
 
 .filter-size {
 
-  &__form {}
-
   &__label {
     padding-bottom: 20px;
     padding-left: 35px;
@@ -1195,7 +1099,6 @@
     &:last-child {
       padding-bottom: 0;
     }
-
   }
 
   &__input {
@@ -1208,8 +1111,7 @@
       & + .filter-size__text {
         color: $accent;
       }
-    }
-    
+    }   
   }
 
   &__checkbox {
@@ -1225,11 +1127,8 @@
 
 .filter-category {
 
-  &__form {}
-
   &__label {
     cursor: pointer;
-
   }
 
   &__input {
@@ -1249,15 +1148,9 @@
     margin-bottom: 15px;
     background-color: #f6f6f6;
   }
-
-  &__checkbox-text {}
-
-  &__checkbox-number {}
 }
 
 .filter-popular {
-
-  &__form {}
 
   &__label {
     cursor: pointer;
@@ -1280,8 +1173,6 @@
   &__checkbox {
     border: 1px solid $default;
     padding: 10px 20px;
-    
-
   }
 }
 
@@ -1293,9 +1184,9 @@
     margin-bottom: 40px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    
+    align-items: center;   
   }
+
   &__filter-btn {
     padding: 0;
     border: none;
@@ -1304,17 +1195,18 @@
     line-height: 0px;
     cursor: pointer;
   }
+
   &__filter-buttons {
     display: flex;
     align-items: center;
   }
-  &__filter-btn--active {
 
+  &__filter-btn--active {
     path {
       fill: $accent;
-    }
-    
+    } 
   }
+
   &__inner {
     display: flex;
     flex-wrap: wrap;
@@ -1354,6 +1246,517 @@
   height: 5px;
   background-image: url('../images/icons/select-arrow.svg');
   border: none;
+}
+
+.product-page {
+  padding-top: 120px ;
+  
+}
+
+.product-one {
+
+  &__inner {
+    display: flex;
+  }
+
+  &__slide {
+    width: 730px;
+    margin-right: 70px;
+    display: grid;
+    grid-template-columns: 140px 560px;
+    grid-column-gap: 30px;
+  }
+
+  &__content {
+    width: 370px;
+  }
+
+  &__title {
+    color: $title;
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
+
+  &__box {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+  }
+
+  &__star-box {
+    display: flex;
+    align-items: center;
+    span {
+      padding-left: 8px;
+      color: $title;
+      font-size: 20px;
+    }
+  }
+
+  &__price {
+    color: $title;
+    font-size: 18px;
+    display: flex;
+  }
+
+  &__price-new {
+    margin-right: 15px;
+  }
+
+  &__price-old {
+    color: #ceced0;
+    text-decoration: line-through;
+  }
+
+  &__text {
+    margin-bottom: 30px;
+    span {
+      display: block;
+      color: $title;
+      @extend %roboto-400;
+      font-size: 18px;
+    }
+  }
+}
+
+.product-slide {
+
+  &__thumb {
+    width: 140px;
+    margin-right: 30px;
+  }
+
+  &__thumb-item {
+    margin-bottom: 21px;
+    width: 140px;
+    height: 140px;
+    cursor: pointer;
+  }
+
+  .slick-vertical .slick-slide {
+    display: block;
+    height: auto;
+    border: 1px solid transparent;
+    height: 140px;
+    margin-bottom: 30px;
+  }
+
+  &__thumb-img {
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+  }
+
+  &__big {
+    width: 560px;
+  }
+
+  &__big-img {
+    width: 560px;
+    height: 650px;
+    object-fit: cover;
+  }
+}
+
+
+.product-filter {
+
+  &__color {
+    margin-bottom: 25px;
+  }
+
+  &__color-title , &__size-title {
+    margin-bottom: 8px;
+    font-size: 18px;
+    color: $title;
+    @extend %roboto-400;
+  }
+
+  &__color-label {
+    margin-right: 5px;
+  }
+
+  &__color-input {
+    @extend %radio-hidden;
+    margin-right: -10px;
+    &:checked {
+      & + .product-filter__color-span {
+        border-color: $accent;
+      }
+    }
+  }
+
+  &__color-span {
+    width: 24px;
+    height: 24px;
+    border: 1px solid #ccccce;
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    span {
+      position: absolute;
+      display: inline-block;
+      content: '';
+      width: 16px;
+      height: 16px;
+      top: 3px;
+      left: 3px;
+    }
+    
+  }
+
+  &__size {
+    margin-bottom: 25px;
+  }
+
+  &__size-label {
+    margin-right: 8px;
+    display: inline-block;
+  }
+
+  &__size-input {
+    @extend %radio-hidden;
+    margin-right: -9px;
+    &:checked {
+      &+.product-filter__size-span {
+        border-color: $accent;
+        color: $accent;
+      }
+    }
+
+  }
+
+  &__size-span {
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #ececec;
+    display: inline-block;
+  }
+
+  &__btn {
+    @extend %btn;
+    border: none;
+    margin-left: 15px;
+    cursor: pointer;
+  }
+}
+
+.jq-number__field input {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0;
+  height: 50px;
+  border: none;
+  outline: none;
+  @extend %quicksand-500;
+  font-size: 16px;
+  color: $title;
+  text-align: center;
+}
+
+.jq-number__field {
+  width: 114px;
+  border: 1px solid #f0f0f0;
+  border-radius: 0;
+  border-bottom-color: #f0f0f0;
+  box-shadow: none;
+  transform: translateY(1px);
+}
+
+.jq-number {
+  position: relative;
+  vertical-align: middle;
+  padding: 0 0px 0 0;
+  position: relative;
+}
+
+.jq-number__spin {
+  position: absolute;
+  cursor: pointer;
+  width: 12px;
+  height: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+
+.jq-number__spin.minus {
+  left: 15px;
+}
+
+.jq-number__spin.plus {
+  right: 15px;
+}
+
+
+.jq-number__spin.plus::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 5px;
+  width: 1px;
+  background-color: $title;
+  height: 12px;
+}
+
+.jq-number__spin:after {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 0;
+  width: 12px;
+  background-color: $title;
+  height: 1px;
+}
+
+.product-info {
+
+  &__list {
+    margin-bottom: 30px;
+  }
+
+  &__item {
+    margin-bottom: 5px;
+    display: flex;
+  }
+
+  &__title {
+    min-width: 100px;
+    color: $title;
+  }
+
+  &__link {
+    path {
+      fill: $default;
+    }
+    & + .product-info__link {
+      margin-left: 14px;
+    }
+    &:hover {
+      path {
+        fill: $accent;
+      }
+    }
+  }
+}
+
+.product-tabs {
+  padding-top: 110px;
+  &__top {
+    margin-bottom: 40px;
+    
+    border-bottom: 1px solid #f0f0f0;
+    @extend %roboto-400;
+
+    font-size: 22px;
+  }
+
+  &__top-item {
+    padding-bottom: 10px;
+    display: inline-block;
+
+    &--active {
+      border-bottom: 1px solid $accent;
+      color: $title;
+    }
+    
+    
+    & + .product-tabs__top-item {
+      margin-left: 55px;
+    } 
+
+    
+  }
+
+  &__content-item {
+    display: none;  
+    &.product-tabs__content-item--active {
+      display: block;
+    }
+  }
+}
+
+.comments {
+
+  &__item {
+    display: flex;
+    margin-bottom: 40px;
+  }
+
+  &__img {
+    width: 70px;
+    height: 70px;
+    margin-right: 30px;
+  }
+
+  &__content {
+    
+  }
+
+  &__content-link {
+    color: $title;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+  &__content-top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+  }
+
+  &__content-box {
+    display: flex;
+  }
+
+  &__content-name {
+
+    margin-right: 15px;
+  }
+
+  &__content-date {
+    padding-left: 15px;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 7px;
+      left: 1px;
+      height: 13px;
+      width: 1px;
+      background-color: #8d8d8d;
+
+    }
+  }
+
+  &__content-star {}
+
+  &__content-text {
+
+  }
+
+  &__content-reply {
+    display: inline-block;
+    padding-left: 25px;
+    position: relative;
+    &::before {
+      content: '';
+      top: 7px;
+      left: 3px;
+      position: absolute;
+      height: 13px;
+      width: 15px;
+      background-image: url('../images/icons/replay-arrow.svg')
+    }
+  }
+}
+
+.comments {
+
+  &__form {
+    border-bottom: 1px solid #f0f0f0;
+    padding-bottom: 60px;
+  }
+
+  &__form-title {
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+    margin-bottom: 35px;
+    padding-bottom: 10px;
+    position: relative;
+    &::before {
+      position: absolute;
+      content: '';
+      height: 2px;
+      width: 50px;
+      background-color: $accent;
+      bottom: -5px;
+      left: 0px;
+    }
+  }
+
+  &__form-raiting {
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+  }
+
+  &__form-label {
+    margin-right: 25px;
+  }
+
+  &__form-raitingtitle {
+    margin-right: 60px;
+    color: $title;
+  }
+
+  &__form-input {
+    @extend %radio-hidden;
+    &:checked + .comments__form-checkbox{
+      path {
+        fill: #ffc35b;
+      }
+    }
+  }
+
+  &__form-checkbox {
+    cursor: pointer;
+    path {
+      fill: $default;
+    }
+  }
+
+  &__form-textbox {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__form-text {
+    width: 570px;
+    height: 50px;
+    padding: 0 20px;
+    display: inline-block;
+    border: 1px solid #f0f0f0;
+  }
+
+  &__form-textarea {
+    padding: 17px 20px;
+    height: 225px;
+    width: 100%;
+    border: 1px solid #f0f0f0;
+    display: block;
+    resize: none;
+    margin-bottom: 40px;
+  }
+
+  &__form-btn {
+    @extend %btn;
+    cursor: pointer;
+  }
+}
+
+.related {
+  padding: 55px 0 120px;
+  &__title {
+    margin-bottom: 40px;
+  }
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 30px;
+    .product-item__img-box {
+      height: auto;
+    }
+    .product-item__title {
+      margin: 5px 0 5px;
+      font-size: 18px;
+    }
+  }
 }
 
 
