--- a/app/blog.njk
+++ b/app/blog.njk
@@ -8,93 +8,10 @@
     <link rel="stylesheet" href="css/blog.min.css" />
   </head>
   <body>
-   <header class="header">
-      <div class="container">
-        <div class="header__inner">
-          <a class="logo" href="#">
-            <img class="logo__img" src="images/logo.png" alt="logo" />
-          </a>
-          <nav class="menu">
-            <ul class="menu__list">
-              <li class="menu__list-item">
-                <a class="menu__list-link menu__list-link--active" href="#"
-                  >HOME</a
-                >
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">SHOP</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">PAGE</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">BLOG</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">CONTACT</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="user-nav">
-            <a class="user-nav__link" href="">
-              <img
-                class="user-nav__img"
-                src="images/icons/user.svg"
-                alt="user icon"
-              />
-            </a>
-            <a class="user-nav__link" href="">
-              <img
-                class="user-nav__img"
-                src="images/icons/search.png"
-                alt="search icon"
-              />
-            </a>
-            <a class="user-nav__link" href="">
-              <img
-                class="user-nav__img"
-                src="images/icons/heart.png"
-                alt="heart icon"
-              />
-              <span class="user-nav__num">3</span>
-            </a>
-            <a class="user-nav__link" href="">
-              <img
-                class="user-nav__img"
-                src="images/icons/cart.svg"
-                alt="cart icon"
-              />
-              <span class="user-nav__num">7</span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </header>
+   {% include ('app/module/_header/_header.html') %}
 
     <main class="main">
-        <section class="top">
-        <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
-          <div class="container">
-            <h2 class="top__title title">
-              LOG IN
-            </h2>
-            <div class="breadcrumbs">
-              <ul class="breadcrumbs__list">
-                <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#">
-                    Home
-                  </a>
-                </li>
-                <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#">
-                    Log in
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
+     {% include ('app/module/_top/_top.html') %}
       <section class="blog-page">
         <div class="container">
           <div class="blog-page__inner">
@@ -452,201 +369,7 @@
       </section>
     </main>
 
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-top">
-          <div class="footer-top__item footer-top__contact">
-            <a class="logo footer-top__logo" href="#">
-              <img class="logo__img" src="images/logo.png" alt="logo" />
-            </a>
-            <a class="footer-top__adress" href="#">
-              No. 342 - London Oxford Street, 012 United States
-            </a>
-            <a class="footer-top__email" href="mailto:Youremail@gmail.com"
-              >Youremail@gmail.com</a
-            >
-            <a class="footer-top__tel" href="tel:+02838388393">
-              +0283 838 8393
-            </a>
-            <ul class="footer-top__social-list">
-              <li class="footer-top__social-item">
-                <a class="footer-top__social-link" href="#">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                    width="11px"
-                    height="18px"
-                    viewBox="0 0 11 17"
-                    version="1.1"
-                  >
-                    <g>
-                      <path
-                        d="M 9.59375 9.5625 L 10.085938 6.484375 L 7.027344 6.484375 L 7.027344 4.488281 C 7.027344 3.648438 7.453125 2.828125 8.824219 2.828125 L 10.214844 2.828125 L 10.214844 0.207031 C 10.214844 0.207031 8.953125 0 7.746094 0 C 5.230469 0 3.585938 1.472656 3.585938 4.140625 L 3.585938 6.484375 L 0.785156 6.484375 L 0.785156 9.5625 L 3.585938 9.5625 L 3.585938 17 L 7.027344 17 L 7.027344 9.5625 Z M 9.59375 9.5625 "
-                      />
-                    </g>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-top__social-item">
-                <a class="footer-top__social-link" href="#">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                    width="16px"
-                    height="16px"
-                    viewBox="0 0 16 16"
-                    version="1.1"
-                  >
-                    <g>
-                      <path
-                        d="M 14.355469 4.742188 C 14.367188 4.882812 14.367188 5.027344 14.367188 5.167969 C 14.367188 9.503906 11.066406 14.496094 5.035156 14.496094 C 3.175781 14.496094 1.453125 13.960938 0 13.027344 C 0.265625 13.054688 0.519531 13.066406 0.792969 13.066406 C 2.324219 13.066406 3.734375 12.546875 4.863281 11.664062 C 3.421875 11.632812 2.214844 10.691406 1.796875 9.390625 C 2 9.421875 2.203125 9.441406 2.417969 9.441406 C 2.710938 9.441406 3.003906 9.402344 3.277344 9.328125 C 1.777344 9.023438 0.648438 7.707031 0.648438 6.113281 L 0.648438 6.070312 C 1.085938 6.316406 1.59375 6.46875 2.132812 6.488281 C 1.25 5.898438 0.671875 4.894531 0.671875 3.757812 C 0.671875 3.148438 0.832031 2.589844 1.117188 2.101562 C 2.730469 4.089844 5.15625 5.390625 7.878906 5.53125 C 7.828125 5.289062 7.796875 5.035156 7.796875 4.78125 C 7.796875 2.976562 9.257812 1.503906 11.074219 1.503906 C 12.019531 1.503906 12.871094 1.898438 13.472656 2.539062 C 14.214844 2.394531 14.921875 2.121094 15.554688 1.746094 C 15.308594 2.507812 14.792969 3.148438 14.113281 3.554688 C 14.773438 3.480469 15.410156 3.300781 16 3.046875 C 15.554688 3.695312 14.996094 4.273438 14.355469 4.742188 Z M 14.355469 4.742188 "
-                      />
-                    </g>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-top__social-item">
-                <a class="footer-top__social-link" href="#">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                    width="14px"
-                    height="16px"
-                    viewBox="0 0 14 16"
-                    version="1.1"
-                  >
-                    <g>
-                      <path
-                        d="M 3.132812 14 L 0.230469 14 L 0.230469 4.652344 L 3.132812 4.652344 Z M 1.679688 3.378906 C 0.753906 3.378906 0 2.609375 0 1.679688 C 0 0.753906 0.753906 0 1.679688 0 C 2.609375 0 3.363281 0.753906 3.363281 1.679688 C 3.363281 2.609375 2.609375 3.378906 1.679688 3.378906 Z M 13.996094 14 L 11.101562 14 L 11.101562 9.449219 C 11.101562 8.367188 11.078125 6.976562 9.589844 6.976562 C 8.082031 6.976562 7.851562 8.152344 7.851562 9.371094 L 7.851562 14 L 4.953125 14 L 4.953125 4.652344 L 7.734375 4.652344 L 7.734375 5.929688 L 7.777344 5.929688 C 8.164062 5.195312 9.109375 4.417969 10.523438 4.417969 C 13.460938 4.417969 14 6.351562 14 8.867188 L 14 14 Z M 13.996094 14 "
-                      />
-                    </g>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-top__social-item">
-                <a class="footer-top__social-link" href="#">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                    width="15px"
-                    height="16px"
-                    viewBox="0 0 15 15"
-                    version="1.1"
-                  >
-                    <g>
-                      <path
-                        d="M 15 7.671875 C 15 11.816406 12.023438 14.765625 7.621094 14.765625 C 3.40625 14.765625 0 11.519531 0 7.5 C 0 3.480469 3.40625 0.234375 7.621094 0.234375 C 9.675781 0.234375 11.402344 0.953125 12.734375 2.136719 L 10.660156 4.039062 C 7.945312 1.539062 2.898438 3.414062 2.898438 7.5 C 2.898438 10.035156 5.023438 12.085938 7.621094 12.085938 C 10.640625 12.085938 11.773438 10.027344 11.949219 8.957031 L 7.621094 8.957031 L 7.621094 6.457031 L 14.878906 6.457031 C 14.949219 6.828125 15 7.1875 15 7.671875 Z M 15 7.671875 "
-                      />
-                    </g>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-top__social-item">
-                <a class="footer-top__social-link" href="#">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                    width="12px"
-                    height="16px"
-                    viewBox="0 0 12 16"
-                    version="1.1"
-                  >
-                    <g>
-                      <path
-                        d="M 6.375 0.203125 C 3.167969 0.203125 0 2.339844 0 5.800781 C 0 8 1.238281 9.25 1.988281 9.25 C 2.296875 9.25 2.476562 8.386719 2.476562 8.144531 C 2.476562 7.851562 1.734375 7.234375 1.734375 6.023438 C 1.734375 3.511719 3.648438 1.730469 6.121094 1.730469 C 8.25 1.730469 9.824219 2.941406 9.824219 5.164062 C 9.824219 6.820312 9.160156 9.933594 7.003906 9.933594 C 6.226562 9.933594 5.558594 9.371094 5.558594 8.566406 C 5.558594 7.382812 6.382812 6.242188 6.382812 5.023438 C 6.382812 2.953125 3.449219 3.328125 3.449219 5.828125 C 3.449219 6.351562 3.515625 6.933594 3.75 7.414062 C 3.320312 9.269531 2.4375 12.035156 2.4375 13.945312 C 2.4375 14.539062 2.523438 15.117188 2.578125 15.710938 C 2.683594 15.828125 2.632812 15.816406 2.792969 15.757812 C 4.367188 13.601562 4.3125 13.179688 5.023438 10.355469 C 5.410156 11.085938 6.402344 11.480469 7.191406 11.480469 C 10.507812 11.480469 12 8.246094 12 5.332031 C 12 2.226562 9.320312 0.203125 6.375 0.203125 Z M 6.375 0.203125 "
-                      />
-                    </g>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title">Useful Links</h6>
-            <ul class="footer-top__list">
-              <li class="footer-top__item">
-                <a class="footer-top__link" href="#"> About Us </a>
-              </li>
-              <li class="footer-top__item">
-                <a class="footer-top__link" href="#"> Privacy Policy </a>
-              </li>
-              <li class="footer-top__item">
-                <a class="footer-top__link" href="#"> Terms & Conditions </a>
-              </li>
-              <li class="footer-top__item">
-                <a class="footer-top__link" href="#"> Contact Us </a>
-              </li>
-              <li class="footer-top__item">
-                <a class="footer-top__link" href="#"> Help & Support </a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title">My Account</h6>
-            <ul class="footer-top__list">
-              <li class="footer-top__item">
-                <a class="footer-top__link" href="#"> My Account </a>
-              </li>
-              <li class="footer-top__item">
-                <a class="footer-top__link" href="#"> My Cart </a>
-              </li>
-              <li class="footer-top__item">
-                <a class="footer-top__link" href="#"> My WIshlist </a>
-              </li>
-              <li class="footer-top__item">
-                <a class="footer-top__link" href="#"> Registration </a>
-              </li>
-              <li class="footer-top__item">
-                <a class="footer-top__link" href="#"> Check Out </a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer-top__item footer-top__item-form">
-            <h6 class="footer-top__title">Subscribe Our Newsletter</h6>
-            <p class="footer-top__text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-              ipsum suspendisse ultrices gravida.
-            </p>
-            <form class="footer-top__form" action="#">
-              <input
-                class="footer-top__form-input"
-                placeholder="Your email address"
-                type="email"
-                required
-              />
-              <button class="footer-top__form-btn" type="submit">
-                Subscribe
-              </button>
-            </form>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <p class="footer-bottom__copy">
-            © 2019 CodeAstrology. All Rights Reserved.
-          </p>
-          <div class="footer-bottom__accept">
-            We Accept
-            <img
-              class="footer-bottom__accept-img"
-              src="images/icons/mastercard.png"
-              alt=""
-            />
-            <img
-              class="footer-bottom__accept-img"
-              src="images/icons/visa.png"
-              alt=""
-            />
-            <img
-              class="footer-bottom__accept-img"
-              src="images/icons/paypal.png"
-              alt=""
-            />
-          </div>
-        </div>
-      </div>
-    </footer>
-
+    {% include ('app/module/_footer/_footer.html') %}
 
     <script src="js/main.min.js"></script>
   </body>
